--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
-# Backend API Base URL
+# Backend API URL
 # Development: http://localhost:8000
 # Production: https://api.yourdomain.com
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # Better Auth Secret (must match backend BETTER_AUTH_SECRET)
 # Generate with: openssl rand -base64 32
